Trying to prevent social wrapping on tablet

--- a/themes/moyers/static/src/scss/components/_social.scss
+++ b/themes/moyers/static/src/scss/components/_social.scss
@@ -19,6 +19,14 @@
         justify-content: center;
         border-radius: 50%;
 
+        @media screen and (min-width: 1024px) {
+            padding: 9px;
+        }
+
+        @media screen and (min-width: 1180px) {
+            padding: 14px;
+        }
+
         &:hover {
             path {
                 fill: $white;
